--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A wrapper around the ember-cli that, primarily, corrects the output of commands wherever it's needed",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -25,5 +26,8 @@
   "homepage": "https://github.com/Komefumi/x-ember-cli#readme",
   "devDependencies": {
     "prettier": "^2.5.1"
+  },
+  "peerDependencies": {
+    "ember-cli": "^3.28.4"
   }
 }
