--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "prettier --write ."
+    "lint": "prettier --write .",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
