--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "prettier --write .",
     "build": "tsc"
   },
+  "bin": {
+    "x-ember-cli": "./bin/cli.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Komefumi/x-ember-cli.git"
@@ -27,6 +30,7 @@
   "homepage": "https://github.com/Komefumi/x-ember-cli#readme",
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
+    "@types/prettier": "^2.4.2",
     "prettier": "^2.5.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.3"
