--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@tsconfig/node16",
   "compilerOptions": {
     "target": "ES5",
-    "outDir": "./lib"
+    "outDir": "./lib",
+    "declaration": true
   }
 }
