--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "x-ember-cli",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A wrapper around the ember-cli that, primarily, corrects the output of commands wherever it's needed",
   "main": "index.js",
   "scripts": {
@@ -28,10 +28,12 @@
     "url": "https://github.com/Komefumi/x-ember-cli/issues"
   },
   "homepage": "https://github.com/Komefumi/x-ember-cli#readme",
+  "dependencies": {
+    "prettier": "^2.5.1"
+  },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
     "@types/prettier": "^2.4.2",
-    "prettier": "^2.5.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.3"
   },
